fix: add restart policy to docker-compose and apply code review fixes
- docker-compose: add restart: unless-stopped to postgres, backend and frontend
- docker-compose: add comment flagging hardcoded postgres credentials
- ProjetoService: fix compilation error — statusCompra removed from MaterialDTO.Request,
  toMaterialEntity() now defaults directly to StatusCompra.A_COMPRAR
- DataInitializer: remove log line that exposed default password in plaintext;
  admin password now reads from ADMIN_DEFAULT_PASSWORD env var (fallback: ctrlplay2024)
- SecurityConfig: CORS allowed origins now configurable via CORS_ALLOWED_ORIGINS env var
  (default '*' for dev; set to exact frontend origin in production)
- RelatorioController: replace RuntimeException (with user email embedded) with
  ResourceNotFoundException for proper 404 response
- ResourceNotFoundException: add single-message constructor
- feat: RelatorioController + RelatorioService (Excel reports per profile)
- feat: RelatoriosPage frontend with per-profile report download

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>